2011-09-23  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSESupport.h: on OSX, use OSXFUSE instead of MacFUSE

2011-02-16  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEOFSAppController.m: don't terminate NSApp in -didUnmount: when
	  GNU_GUI_LIBRARY is used as this leads to an instant crash

2011-02-14  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEOFSAppController.m: workaround for broken
	  -objectForInfoDictionaryKey: in current GNUstep base

	* FUSEObjectFileSystem.m: ported to GNUstep

	* GNUmakefile: added FUSEOFSAppController

	* GSFUSE/GNUmakefile: added c99 compile time option and properly
	  provided FUSE define via compiler flag

	* GSFUSE/GMUserFileSystem.m: re-added c99 code in for-loops, improved
	  GNUstep port which should work now (in theory).

2011-02-07  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEObjectFileSystem.m: fixed multiple errors with NSError
	  assignment

2011-02-06  Marcus Mueller  <znek@mulle-kybernetik.com>

	* GSFUSE/*: added sdk-objc from MacFUSE as a GNUstep port

	* GNUmakefile: added GSFUSE subproject and minor adjustments

	* FUSESupport.h: new header for directing either to MacFUSE or
	  GSFUSE

	* FUSEObjectFileSystem.m, FUSEOFSFileProxy.m,
	  NSObject+FUSEOFS.m, FUSEOFSAppController.m:
	  ported to GNUstep

2011-01-30  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEObjectFileSystem.m: fixed multiple incorrect implicit
	  SEL == char* assumptions

	* FUSEOFSAppController.m: added a missing #import

2011-01-29  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEOFSAppController.[hm]: new controller class designed to works as
	  a generic NSApplication delegate in a nib/xib/gorm file suitable
	  for creating and destroying the associated FUSEObjectFileSystem
	  subclass. The FUSEObjectFileSystem class to use is determined
	  via the new "FUSEObjectFileSystemClass" NSUserDefault.

2011-01-26  Marcus Mueller  <znek@mulle-kybernetik.com>
