@@ -1,3 +1,8 @@
+2012-07-25  Marcus Mueller  <znek@mulle-kybernetik.com>
+
+	* GNUmakefile, GSFUSE/GMUserFileSystem.m, GSFUSE/GNUmakefile:
+	  ported to Linux
+
 2011-09-23  Marcus Mueller  <znek@mulle-kybernetik.com>
 
 	* FUSESupport.h: on OSX, use OSXFUSE instead of MacFUSE
